--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Acesso Direto aos Links</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="my-name">
+        <h1>Luiz Fernando B. M.</h1>
+        <h2>
+          Programador e Web Design que impulsiona seus negócios através do
+          Marketing Digital.
+        </h2>
+        <h3>
+          Sempre acreditei que liberdade era estar com quem eu quisesse, no
+          momento e lugar que eu desejasse. É isso que torna o mundo dos
+          negócios online prioridade na minha vida profissional.
+        </h3>
+        <h3 class="frase">
+          “Qualquer coisa que você possa fazer ou sonhar, você pode começar. A
+          ousadia tem genialidade, poder e magia em si.” (John Anster)
+        </h3>
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="./images/nosTorreEif..jpeg"
+          alt="Minha imagem na Torre Eiffel"
+        />
+      </div>
+      <div class="personal-links">
+        <a href="#"
+          ><button>
+            Curso completo de Marketing que eu fiz e recomendo para quem quer
+            alcançar ótimos resultados e começar a viver a vida que deseja.
+          </button></a
+        >
+        <a href="#"
+          ><button>
+            Link para ter acesso ao meu Instagran com conteúdos exclusivos sobre
+            Marketing Digital e Empreendedorismo.
+          </button></a
+        >
+      </div>
+    </div>
+  </body>
 </html>
