styles has been added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1>Luiz Fernando B. M.</h1>
         <h2>
           Programador e Web Design que impulsiona seus negócios através do
-          Marketing Digital.
+          <span>Marketing Digital</span>.
         </h2>
         <h3>
-          Sempre acreditei que liberdade era estar com quem eu quisesse, no
-          momento e lugar que eu desejasse. É isso que torna o mundo dos
-          negócios online prioridade na minha vida profissional.
+          Sempre acreditei que <span>liberdade</span> era estar com quem eu
+          quisesse, no momento e lugar que eu desejasse. É isso que torna o
+          mundo dos negócios online prioridade na minha vida profissional.
         </h3>
         <h3 class="frase">
           “Qualquer coisa que você possa fazer ou sonhar, você pode começar. A
@@ -32,9 +32,10 @@
         />
       </div>
       <div class="personal-links">
+        <h1>Links Importantes:</h1>
         <a href="#"
           ><button>
-            Curso completo de Marketing que eu fiz e recomendo para quem quer
+            Curso completo de Marketing que fiz e recomendo para quem quer
             alcançar ótimos resultados e começar a viver a vida que deseja.
           </button></a
         >
@@ -44,6 +45,8 @@
             Marketing Digital e Empreendedorismo.
           </button></a
         >
+        <h2>Fale comigo através do wpp:</h2>
+        <h3>+351 927 169 054</h3>
       </div>
     </div>
   </body>
