everything is done

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
           <span>Marketing Digital</span>.
         </h2>
         <h3>
-          Sempre acreditei que <span>liberdade</span> era estar com quem eu
-          quisesse, no momento e lugar que eu desejasse. É isso que torna o
-          mundo dos negócios online prioridade na minha vida profissional.
+          Sempre acreditei que <span>liberdade</span> e
+          <span>felicidade</span> era estar com quem eu quisesse, no momento e
+          lugar que eu desejasse. É isso que torna o mundo dos negócios online
+          prioridade na minha vida profissional.
         </h3>
         <h3 class="frase">
           “Qualquer coisa que você possa fazer ou sonhar, você pode começar. A
@@ -33,13 +34,13 @@
       </div>
       <div class="personal-links">
         <h1>Links Importantes:</h1>
-        <a href="#"
+        <a href="https://pay.kiwify.com.br/8gNii7x?afid=AB7VPa5B"
           ><button>
             Curso completo de Marketing que fiz e recomendo para quem quer
             alcançar ótimos resultados e começar a viver a vida que deseja.
           </button></a
         >
-        <a href="#"
+        <a href="https://www.instagram.com/nando.moragas/"
           ><button>
             Link para ter acesso ao meu Instagran com conteúdos exclusivos sobre
             Marketing Digital e Empreendedorismo.
