changing instagran link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             alcançar ótimos resultados e começar a viver a vida que deseja.
           </button></a
         >
-        <a href="https://www.instagram.com/nando.moragas/"
+        <a href="https://www.instagram.com/nandomoragas/"
           ><button>
             Link para ter acesso ao meu Instagran com conteúdos exclusivos sobre
             Marketing Digital e Empreendedorismo.
